# FastAIAPI

./: .gitignore  README.md  pyproject-setuptools.toml  pyproject.toml  setup.cfg
src/fastaiapi/: __init__.py
