[tool.poetry]
name = 'FastAIAPI'
version = '0.0.0.dev0'

description = 'FastAPI for Artificial Intelligence (AI) Applications'

license = 'MIT'

authors = [
  'The Vinh LUONG (LƯƠNG Thế Vinh) <TheVinhLuong@gmail.com>'
]
maintainers = [
  'The Vinh LUONG (LƯƠNG Thế Vinh) <TheVinhLuong@gmail.com>'
]

readme = 'README.md'

homepage = 'https://GitHub.com/FastAIAPI/FastAIAPI'
repository = 'https://GitHub.com/FastAIAPI/FastAIAPI'
documentation = 'https://FastAIAPI.GitHub.io/FastAIAPI'

keywords = [
  'FastAPI',

  'Artificial Intelligence',
  'A.I.',
  'AI',

  'application',
  'app',
]

classifiers = [
  'Development Status :: 3 - Alpha',
  # 'Development Status :: 4 - Beta',
  # 'Development Status :: 5 - Production/Stable',
  # 'Development Status :: 6 - Mature',
  'Environment :: MacOS X',
  'Environment :: Win32 (MS Windows)',
  'Framework :: Kedro',
  'Intended Audience :: Developers',
  'Intended Audience :: Education',
  'Intended Audience :: Financial and Insurance Industry',
  'Intended Audience :: Healthcare Industry',
  'Intended Audience :: Information Technology',
  'Intended Audience :: Legal Industry',
  'Intended Audience :: Manufacturing',
  'Intended Audience :: Science/Research',
  'Intended Audience :: System Administrators',
  'Intended Audience :: Telecommunications Industry',
  'Operating System :: MacOS',
  'Operating System :: MacOS :: MacOS X',
  'Operating System :: Microsoft',
  'Operating System :: Microsoft :: Windows',
  'Operating System :: Microsoft :: Windows :: Windows 7',
  'Operating System :: Microsoft :: Windows :: Windows 8',
  'Operating System :: Microsoft :: Windows :: Windows 8.1',
  'Operating System :: Microsoft :: Windows :: Windows 10',
  'Operating System :: OS Independent',
  'Operating System :: Other OS',
  'Operating System :: POSIX',
  'Operating System :: POSIX :: Linux',
  'Programming Language :: Python',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3.8',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Topic :: Education',
  'Topic :: Home Automation',
  'Topic :: Scientific/Engineering',
  'Topic :: Scientific/Engineering :: Artificial Intelligence',
  'Topic :: Scientific/Engineering :: Astronomy',
  'Topic :: Scientific/Engineering :: Atmospheric Science',
  'Topic :: Scientific/Engineering :: Bio-Informatics',
  'Topic :: Scientific/Engineering :: Chemistry',
  'Topic :: Scientific/Engineering :: GIS',
  'Topic :: Scientific/Engineering :: Human Machine Interfaces',
  'Topic :: Scientific/Engineering :: Hydrology',
  'Topic :: Scientific/Engineering :: Image Processing',
  'Topic :: Scientific/Engineering :: Image Recognition',
  'Topic :: Scientific/Engineering :: Information Analysis',
  'Topic :: Scientific/Engineering :: Mathematics',
  'Topic :: Scientific/Engineering :: Medical Science Apps.',
  'Topic :: Scientific/Engineering :: Physics',
  'Topic :: Scientific/Engineering :: Visualization',
  'Topic :: Software Development',
  'Topic :: Software Development :: Libraries',
  'Topic :: Software Development :: Libraries :: Application Frameworks',
  'Topic :: Software Development :: Libraries :: Python Modules',
]

packages = [
  {include = 'fastaiapi', from = 'src'}
]

include = []
exclude = []


[tool.poetry.dependencies]

# PYTHON
# ======
Python = '>= 3.8, < 3.11'


# DATA MANAGEMENT & PROCESSING
# ============================
NumBa = '^0.55.0rc1'   # let higher dependencies figure
NumPy = '^1.20.3'   # let higher dependencies figure
Pandas = '^1.3.5'
PyArrow = '^6.0.1'
PySpark = '^3.2.0'
Ray = {version = '^1.9.0', markers = "python_version < '3.10'"}
SciPy = '^1.7.3'   # let higher dependencies figure

Pillow = '^8.4.0'   # image processing
# Pillow-SIMD = '^7.0.0'   # complex to install
SciKit-Image = '^0.19.1'

Kedro = {version = '^0.17.6', markers = "python_version < '3.9'"}


# MACHINE LEARNING / DEEP LEARNING & RELATED
# ==========================================

StatsModels = '^0.13.1'

# SciKit-Learn & related
Auto-SKLearn = '^0.14.2'
SciKit-Learn = '^0.24.2'   # let Auto-SKLearn figure

# TensorFlow & related
TensorFlow = {version = '^2.7.0', markers = "python_version < '3.10'"}
TensorFlow-DataSets = '^4.4.0'
TensorFlow-Hub = '^0.12.0'

# Torch & related
Torch = {version = '^1.10.1', markers = "python_version < '3.10'"}
Torch-Model-Archiver = '^0.5.1'
TorchServe = '^0.5.1'

TorchAudio = {version = '^0.10.1', markers = "python_version < '3.10'"}
TorchText = {version = '^0.11.1', markers = "python_version < '3.10'"}
TorchVision = {version = '^0.11.2', markers = "python_version < '3.10'"}

# Hugging Face & related
DataSets = '^1.16.1'
HuggingFace-Hub = '^0.2.1'
Transformers = {version = '^4.14.1', markers = "python_version < '3.10'"}

SentencePiece = '^0.1.96'   # Translation
TIMM = {version = '^0.4.12', markers = "python_version < '3.10'"}   # for Object Detection
# Torch-Scatter = '^2.0.9'   # Table Question Answering - requires Torch first

# Topological Data Analysis (TDA) & related
Giotto-TDA = {version = '^0.5.1', markers = "python_version < '3.10'"}
GUDHI = {version = '^3.4.1', markers = "python_version < '3.10'"}

# Cloud AI/ML Services
Google-Cloud-Translate = '^3.6.1'
GoogleTrans = '^4.0.0rc1'

# Hyper-Parameter Tuning & related
Bayesian-Optimization = '^1.2.0'
ConfigSpace = '^0.4.20'
Hpbandster = '^0.7.4'
Tabulate = '^0.8.9'

# ML Model Explainability & related
LIME = '^0.2.0.1'
SHAP = {version = '^0.40.0', markers = "python_version < '3.10'"}


# NON-ML MODELING
# ===============

# Fuzzy Logic
SciKit-Fuzzy = '^0.4.2'


# MODEL REPOSITORY & RELATED
# ==========================
CloudPickle = '^2.0.0'
JobLib = '^1.1.0'
S3FS = '^2021.11.1'


# FASTAPI & RELATED
# =================

# FastAPI
FastAPI = '^0.70.1'

# SQLModel
SQLModel = '^0.0.5'

# GraphQL
# Ariadne = '^0.13.0'   # ariadne 0.13.0 depends on graphql-core>=3.1.0
                        # graphene-django 2.15.0 depends on graphql-core<3
# GQL = '^2.0.0'   # conflicts with other deps
Graphene = '^3.0'
# Graphene-Mongo = '^0.2.13'
# Graphene-SQLAlchemy = '^2.3.0'
GraphQLClient = '^0.2.4'
GraphQL-Core = '^3.1.7'
GraphQL-Relay = '^3.1.0'
Py-GQL = '^0.6.1'
SGQLC = '^14.1'
# Strawberry-GraphQL = '^0.93.3'   # conflicts with other deps

# Other API-related
CoreAPI = '^2.3.3'   # closely related to Django REST Framework
CoreAPI-CLI = '^1.0.9'
Markdown = '^3.3.6'   # Markdown support for the browsable API

HAL-Codec = '^1.0.2'
JSONHyperSchema-Codec = '^1.0.3'
OpenAPI-Codec = '^1.3.2'

JSONSchema = '^4.3.1'
Pydantic = '^1.8.2'

HTTPie = '^2.6.0'

# Database Adapters/Backends/Connectors/Drivers
MariaDB-DynCol = '^3.4.0'
Django-MySQL = '^4.3.0'
MySQLClient = '^2.1.0'
MySQL-Connector-Python = '^8.0.27'
PsycoPG2-binary = '^2.9.2'
SQLAlchemy = '^1.4.28'

# ASGI Web Servers & related
ASGIRef = '^3.4.1'   # let higher dependencies figure
Channels = '^3.0.4'
Daphne = '^3.0.2'
GUnicorn = '^20.1.0'
# H11 = '^0.12.0'   # conflicts with other deps
Hypercorn = '^0.13.1'
Quart = '^0.16.2'
Starlette = '^0.16'   # let higher dependencies figure
Uvicorn = '^0.16.0'


# COMMAND-LINE INTERFACE (CLI)
# ============================
CLICK = '^7.1.2'   # let Streamlit figure
Colored = '^1.4.3'


# MISC / OTHER
# ============
GitPython = '^3.1.24'
'Ruamel.YAML' = '^0.17.17'
PSUtil = '^5.8.0'
Python-DateUtil = '^2.8.1'   # let higher dependencies figure
Python-DotEnv = '^0.19.2'
PyTZ = '^2021.3'
Requests = '^2.25.1'   # let higher dependencies figure
Tqdm = '^4.62.3'


# CLOUD
# =====
# AWSEBCLI = '^3.20.2'


[tool.poetry.dev-dependencies]
Commitizen = '^2.20.2'
Pre-Commit = '^2.16.0'


[tool.poetry.scripts]
faa = 'fastaiapi.util.cli:faa'


[tool.poetry.extras]
doc = [
  # Sphinx & related
  'Sphinx >= 4.3.1',
  'Sphinx-AutoBuild >= 2021.3.14',
  'SphinxContrib-JSMath >= 1.0.1',

  # Markdown
  'CommonMark >= 0.9.1',
  'MyST-Parser >= 0.16.1',
  'ReCommonMark >= 0.7.1',
]

lint = [
  'Bandit >= 1.7.1',
  'Flake8 >= 4.0.1',
  'MyPy >= 0.920',
  'Prospector >= 1.5.3.1',
  'PyCodeStyle >= 2.8.0',
  'PyDocStyle >= 6.1.1',
  'PyLama >= 8.3.6',
  'PyLint >= 2.12.2',

  'Black >= 21.12',
]

test = [
  'Nose >= 1.3.7',
  'Nose2 >= 0.10.0',
  'PyTest >= 6.2.5',
  'UnitTest2 >= 1.1.0',
]


[tool.poetry.plugins]

[tool.poetry.plugins."blogtool.parsers"]


[tool.poetry.urls]
GitHub = 'https://GitHub.com/FastAIAPI/FastAIAPI'


[build-system]
requires = [
  'Poetry-Core >= 1.0.7',

  # *** TEMP FIX for SetUpTools-related bug ***
  # github.com/pypa/pip/issues/10743#issuecomment-998321115
  # github.com/python-poetry/poetry/issues/3153#issuecomment-727196619
  # github.com/python-poetry/poetry/issues/4915#issuecomment-999449889
  'SetUpTools >= 60.1.0',
]
build-backend = 'poetry.core.masonry.api'
